site lables for NG on map

--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -852,6 +852,11 @@
     "\n",
     "#seismographs ngatamariki\n",
     "plt.plot(seisng['lon'], seisng['lat'], color='gray', markeredgewidth=0.2, linestyle='None', marker='^', markersize=3, transform=ccrs.Geodetic())\n",
+    "geodetic_transform = ccrs.Geodetic()._as_mpl_transform(ax)\n",
+    "text_transform = offset_copy(geodetic_transform, units='dots', y=-10)\n",
+    "#plot text labels\n",
+    "for index, row in seisng.iterrows():\n",
+    "    plt.text(row['lon'], row['lat'], row['name'], verticalalignment='top', horizontalalignment='center', transform=text_transform, fontsize=3)\n",
     "#seismographs rotokawa\n",
     "plt.plot(seisrt['lon'], seisrt['lat'], color='gray', markeredgewidth=0.0, linestyle='None', marker='o', markersize=3, transform=ccrs.Geodetic())\n",
     "#seismographs geonet\n",
