add code toggle option

--- a/rcl_temperature/rcl_temp-news.ipynb
+++ b/rcl_temperature/rcl_temp-news.ipynb
@@ -8,21 +8,46 @@
     "--\n",
     "\n",
     "This version is for Brad Scott to use for GeoNet news stories or VABs\n",
-    "--"
+    "--\n",
+    "\n",
+    "**Click Cell-> Run All to execute this notebook**\n",
+    "\n",
+    "**Code can be optionally 'hidden'**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import HTML\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "The raw code for this IPython notebook is by default hidden for easier reading.\n",
+    "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.''')"
    ]
   },
   {
@@ -36,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This gets pretty much all recent data logger temperature data from RCL"
+    "This gets pretty much all recent data logger temperature data from RCL, the last 6000 days"
    ]
   },
   {
@@ -60,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfday = df.resample('D').mean()"
@@ -78,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfday.dropna(inplace=True)"
@@ -124,9 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig = tp.get_figure()\n",
@@ -145,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bins = np.arange(8,61,1)"
@@ -185,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig = hp.get_figure()\n",
@@ -211,9 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#outlet, thermometer\n",
@@ -264,9 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfmu = dfm[dfm.index<='1995-09-20 00:00:00']"
