add all code cell hide

--- a/drumplot.ipynb
+++ b/drumplot.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drumplot (Helicorder) With Data Select and Filtering\n",
+    "--\n",
+    "\n",
+    "**What and How**\n",
+    "\n",
+    "The purpose of this notebook is to provide non-seismologists with a relatively easy to use tool to make drumplots (helicorders) of a day of seismic data. In particular, it provides a capability to filter the data before plotting. This was identified as a short coming of existing products at the time of the April 2016 White Island eruption. Filtering can be important to enhance very long period (VLP) signals in seismic waveforms that can accompany explosive eruptions, but it can also enhance other signals with a specific frequency content.\n",
+    "\n",
+    "Data are acquired from GeoNet's FDSN web servers. The archive server is used as the first choice, and if that does not contain the data (it only keeps data older than 7 days) then the near real-time server will be used instead (which contains the last 8 days of data.\n",
+    "\n",
+    "Large signals can produce a trace that extends over much of the drumplot and obscures other parts of the plot. For that reason, large amplitude waves are clipped before plotting.\n",
+    "\n",
+    "\n",
+    "**Instructions**\n",
+    "1. Run the notebook. To do this, click 'Cell' in the dropdown menu, and then click 'Run All'.\n",
+    "2. Select the date and the data stream, and then click 'Retrieve data'.\n",
+    "3. This may take a few moments. Once the data have been retrieved, a message will be displayed.\n",
+    "4. If you want to filter the data, select the box labelled Filter? The default is no filtering. If you want to filter the waveform, you also need to select the bandpass filter range. The default is 0.1 to 10 Hz.\n",
+    "5. Depending on the amplitude of the signal, it may be necessary to adjust the plot gain, this scales the traces up or down. Some experimentation may be needed to find the best value. Try the default value first, it is suitable for many drumplots.\n",
+    "6. Click 'Show on screen' to display the drumplot below.\n",
+    "7. Large amplitudes are automatically clipped. The clip value is currently not adjustable by a user.\n",
+    "8. You can repeat steps 4-6 as many times as you want, adjusting filter parameters and plot gains, to get the drumplot looking the way you want. Each time you click on 'Show on screen', a new drumplot will be produced and will show below any existing drumplots.\n",
+    "9. To produce an output file suitable for printing, click on 'Output to file'. This will produce a file that is visible in the Jupyter Hub file manager tab in your browser. To save that file, click on the file name to open a view of the helicorder in another browser tab, then right click on the image and select 'Save image as ...'.\n",
+    "10. The image will be named station.location.component.network_yyyymmdd_filter.drum.png. Examples are WIZ.10.HHZ.NZ_20171031_bandpass_0.1-4.6.drum.png and WIZ.10.HHZ.NZ_20171031_nofilt.drum.png."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -13,44 +42,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Drumplot (Helicorder) With Data Select and Filtering\n",
-    "--\n",
-    "\n",
-    "**What and How**\n",
-    "\n",
-    "The purpose of this notebook is to provide non-seismologists with a relatively easy to use tool to make drumplots (helicorders) of a day of seismic data. In particular, it provides a capability to filter the data before plotting. This was identified as a short coming of existing products at the time of the April 2016 White Island eruption. Filtering can be important to enhance very long period (VLP) signals in seismic waveforms that can accompany explosive eruptions.\n",
-    "\n",
-    "Data are acquired from GeoNet's FDSN web servers. The archive server is used as the first choice, and if that does not contain the data (it only keeps data older than 7 days) then the near real-time server will be used instead.\n",
-    "\n",
-    "Large signals can produce a trace that extends over much of the drumplot and obscures other information. For that reason, large amplitude waves are clipped before plotting.\n",
-    "\n",
-    "\n",
-    "**Instructions**\n",
-    "1. Run the notebook. To do this, click 'Cell' in the dropdown menu, and then click 'Run All'.\n",
-    "2. Input boxes will appear below cell [15].\n",
-    "3. Select the date and the data stream, and then click 'Retrieve data'.\n",
-    "4. This may take a few moments. Once the data have been retrieved, a message will be displayed.\n",
-    "5. Move to the input boxes below cell [16].\n",
-    "6. If you want to filter the data, select the box labelled Filter? The default is no filtering. If you want to filter the waveform, you also need to select the bandpass filter range. The default is 0.1 to 10 Hz.\n",
-    "7. Depending on the amplitude of the signal, it may be necessary to adjust the plot gain, this scales the traces up or down. Some experimentation may be needed to find the best value. Try the default value first, it is suitable for many drumplots.\n",
-    "8. Click 'Show on screen' to display the drumplot below.\n",
-    "9. Large amplitudes are automatically clipped. The clip value is currently not adjustable by a user.\n",
-    "10. You can repeat steps 6-8 as many times as you want, adjusting filter parameters and plot gains, to get the drumplot looking the way you want. Each time you click on 'Show on screen', a new drumplot will be produced and will show below any existing drumplots.\n",
-    "11. To produce an output file suitable for printing, click on 'Output to file'. This will produce a file that is visible in the Jupyter Hub file manager tab in your browser. To save that file, click on the file name to open a view of the helicorder in another browser tab, then right click on the image and select 'Save image as ...'.\n",
-    "12. The image will be named station.location.component.network_yyyymmdd_filter.drum.png. Examples are WIZ.10.HHZ.NZ_20171031_bandpass_0.1-4.6.drum.png and WIZ.10.HHZ.NZ_20171031_nofilt.drum.png."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import HTML\n",
     "from obspy.core import UTCDateTime\n",
     "from obspy.clients.fdsn import Client\n",
     "import matplotlib.pyplot as plt\n",
@@ -67,6 +64,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "The raw code for this IPython notebook is by default hidden for easier reading.\n",
+    "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
@@ -74,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#GeoNet's FDSN web servers\n",
@@ -87,9 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "current = False"
@@ -98,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#plot initialisation\n",
@@ -122,9 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def selsite(s):\n",
@@ -134,32 +145,13 @@
     "  stn = site.split(\".\")[0]\n",
     "  loc = site.split(\".\")[1]\n",
     "  cmp = site.split(\".\")[2]\n",
-    "  net = site.split(\".\")[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "  net = site.split(\".\")[3]\n",
+    "\n",
     "def seldate(d):\n",
     "  global pdate\n",
     "  date = d['new']\n",
     "  pdate = date.strftime(\"%Y%m%d\")\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "  \n",
     "def retrieve(r):\n",
     "  global tr\n",
     "  if (current):   #current data, last day, nrt client only\n",
@@ -171,69 +163,33 @@
     "    try:\n",
     "        client = Client(arc_client)\n",
     "        st = client.get_waveforms(str(net), str(stn), str(loc), str(cmp), time, time + 86400, attach_response=True)\n",
-    "        print 'arc client successful'\n",
+    "        print ('arc client successful')\n",
     "        #if this raises an exception, try the near real-time server\n",
     "    except:\n",
     "        client = Client(nrt_client)\n",
     "        st = client.get_waveforms(str(net), str(stn), str(loc), str(cmp), time, time + 86400, attach_response=True)\n",
-    "        print 'nrt client successful'\n",
+    "        print ('nrt client successful')\n",
     "  st.remove_sensitivity()\n",
     "  st.merge(fill_value = 0.0) #merge streams, fill gaps with zeros\n",
     "  tr = st[0]\n",
     "  tr.data *= 1e9 #convert from m/s to nm/s\n",
     "  tr.data = np.clip(tr.data, clip*-1, clip)\n",
-    "  print 'data retrieved'\n",
-    "  print str(st)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "  print ('data retrieved')\n",
+    "  print (tr)\n",
+    "\n",
     "def bandpass(bp):\n",
     "  global lp, hp\n",
-    "  lp, hp  = bp['new']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "  lp, hp  = bp['new']\n",
+    "\n",
     "def filter(f):\n",
     "  global filt  \n",
-    "  filt = f['new']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "  filt = f['new']\n",
+    "\n",
     "def gain(g):\n",
     "  global magn, scale  \n",
     "  magn = g['new']\n",
-    "  scale = defscale / magn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "  scale = defscale / magn\n",
+    "\n",
     "def screen(c):\n",
     "    if (filt):\n",
     "        trcp = tr.copy()\n",
@@ -242,17 +198,8 @@
     "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
     "    else:\n",
     "        title = site + '_' + pdate + '_nofilt'\n",
-    "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "\n",
     "def output(o):\n",
     "    if (filt):\n",
     "        trcp = tr.copy()\n",
@@ -267,19 +214,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "s = widgets.Select(\n",
     "    options=['select stream', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', 'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ'],\n",
     "    value='select stream',\n",
-    "    description='Stream to display:',\n",
+    "    description='Stream:',\n",
     "    disabled=False\n",
     ")\n",
     "s.observe(selsite, names='value')\n",
     "\n",
     "d = widgets.DatePicker(\n",
-    "  description='Date to display:')\n",
+    "  description='Date:')\n",
     "d.observe(seldate, names='value')\n",
     "\n",
     "r=widgets.Button(\n",
@@ -358,21 +307,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "widgets": {
    "state": {
