--- a/ssam/ssamdayfile.ipynb
+++ b/ssam/ssamdayfile.ipynb
@@ -74,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#set start,end times for the day\n",
@@ -101,6 +103,7 @@
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -138,7 +141,9 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hour = np.arange(0, 24, 0.1)"
