change iteritems to items

--- a/sds_holdings.ipynb
+++ b/sds_holdings.ipynb
@@ -20,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%javascript\n",
@@ -63,7 +61,7 @@
    "outputs": [],
    "source": [
     "#sds folder\n",
-    "sds = '/home/sherburn/data1/my_sds'\n",
+    "sds = '/home/sherburn/scratch/my_sds'\n",
     "\n",
     "#station list to check\n",
     "stations_rot = ['NZ.RT01.10.EHZ', 'NZ.RT02.10.EHZ', 'NZ.RT03.10.EHZ', 'NZ.RT04.10.EHZ', 'NZ.RT05.10.EHZ', 'NZ.RT06.10.EHZ', 'NZ.RT07.10.EHZ', 'NZ.RT08.10.EHZ', 'NZ.RT09.10.EHZ', 'NZ.RT10.10.EHZ', 'NZ.RT11.10.EHZ', 'NZ.RT12.10.EHZ', 'NZ.RT13.10.EHZ', 'NZ.RT14.10.EHZ', 'NZ.RT15.10.EHZ', 'NZ.RT16.10.EHZ', 'NZ.RT17.10.EHZ', 'NZ.RT18.10.EHZ', 'NZ.RT19.10.EHZ', 'NZ.RT20.10.EHZ', 'NZ.RT21.10.EHZ', 'NZ.RT22.10.EHZ', 'NZ.RT23.10.EHZ', 'NZ.RT24.10.EHZ']\n",
@@ -73,8 +71,8 @@
     "stations = stations_rotnga\n",
     "\n",
     "#first and last dates to check\n",
-    "date1 = '2017-01-01'\n",
-    "date2 = '2017-12-31'\n",
+    "date1 = '2018-01-01'\n",
+    "date2 = '2018-01-31'\n",
     "\n",
     "dstart = datetime.strptime(date1, '%Y-%m-%d')\n",
     "dend = datetime.strptime(date2, '%Y-%m-%d')\n",
@@ -151,8 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -177,7 +174,7 @@
     "plt.xlabel(\"\") #get rid of useless 'date' label\n",
     "\n",
     "#add station names as label text\n",
-    "for lab,y in stavals.iteritems():\n",
+    "for lab,y in stavals.items():\n",
     "    pl.text(dstart, y, lab, fontsize=12, horizontalalignment='right', verticalalignment='center')  \n",
     "\n",
     "#title\n",
@@ -225,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pcp = percent.plot.barh(figsize=(10,5), legend=False, color='red', edgecolor='None')\n",
@@ -250,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "percent.percent.mean()"
@@ -261,21 +254,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
