major map changes

--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -36,9 +36,10 @@
    "source": [
     "#import cartopy\n",
     "import cartopy.crs as ccrs\n",
-    "import cartopy.io.img_tiles as cimgt\n",
-    "from cartopy.io.img_tiles import OSM\n",
+    "#import cartopy.io.img_tiles as cimgt\n",
+    "#from cartopy.io.img_tiles import OSM\n",
     "#from cartopy.io.img_tiles import StamenTerrain\n",
+    "from cartopy.io.img_tiles import QuadtreeTiles\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -47,6 +48,7 @@
     "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.lines as mlines\n",
     "from matplotlib.transforms import offset_copy\n",
     "from matplotlib import patheffects\n",
     "import matplotlib.gridspec as gridspec\n",
@@ -259,6 +261,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Seismographs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#rotokawa\n",
+    "names = ['lon', 'lat', 'name', 'height']\n",
+    "seisrt = pd.read_csv('seismograph_sites_rotokawa.dat', sep='\\s+', names=names)\n",
+    "\n",
+    "#ngatamariki\n",
+    "names = ['name', 'lat', 'lon']\n",
+    "seisng = pd.read_csv('seismograph_sites_ngatamariki.csv', names=names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seisng.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seisrt.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**GeoNet Seismographs**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "names = ['lon', 'lat', 'name']\n",
+    "seisgn = pd.read_csv('geonet_sites.dat', sep='\\s+', names=names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seisgn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Seismicity from Local Network"
    ]
   },
@@ -360,7 +432,7 @@
    },
    "outputs": [],
    "source": [
-    "#unset ml shows as -9, which plots are M9 symbol, remove\n",
+    "#unset ml shows as -9, which plots as M9 symbol, remove\n",
     "hyprpt = hyprpt[hyprpt['ml']>0]"
    ]
   },
@@ -399,6 +471,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Hypocentre dataframes by magnitude**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#m1\n",
+    "hyprptm0 = hyprpt[hyprpt['ml']<1]\n",
+    "#m1\n",
+    "hyprptm1 = hyprpt[(hyprpt['ml']>=1)&(hyprpt['ml']<2)]\n",
+    "#m2\n",
+    "hyprptm2 = hyprpt[(hyprpt['ml']>=2)&(hyprpt['ml']<3)]\n",
+    "#m3\n",
+    "hyprptm3 = hyprpt[hyprpt['ml']>=3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Plot hypocentres on Open Street Map basemap**"
    ]
   },
@@ -409,14 +506,21 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "imagery = QuadtreeTiles()\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
-    "ax.add_image(imagery, 13)\n",
+    "ax.add_image(imagery, 14)\n",
     "#ax.gridlines()\n",
     "\n",
-    "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
-    "plt.scatter(hyprpt['longitude'], hyprpt['latitude'], color='red', marker='o', s=hyprpt['ml']**2, transform=ccrs.Geodetic())\n",
+    "#hypocentres, symbol coloured is determined by magnitude, with a constant symbol size\n",
+    "#plot in order of increasing magnitude so larger events plot on top\n",
+    "plt.scatter(hyprptm0['longitude'], hyprptm0['latitude'], color='white', marker='o', s=2, transform=ccrs.Geodetic())\n",
+    "plt.scatter(hyprptm1['longitude'], hyprptm1['latitude'], color='yellow', marker='o', s=2, transform=ccrs.Geodetic())\n",
+    "#m2 and m3 may not exist\n",
+    "if len(hyprptm2) != 0:\n",
+    "    plt.scatter(hyprptm2['longitude'], hyprptm2['latitude'], color='darkorange', marker='o', s=2, transform=ccrs.Geodetic())\n",
+    "if len(hyprptm3) != 0:\n",
+    "    plt.scatter(hyprptm3['longitude'], hyprptm3['latitude'], color='red', marker='o', s=2, transform=ccrs.Geodetic())\n",
     "\n",
     "#plot wells\n",
     "names = ['lon', 'lat', 'name']\n",
@@ -428,12 +532,53 @@
     "#plot text labels\n",
     "for index, row in wells.iterrows():\n",
     "    plt.text(row['lon'], row['lat'], row['name'], verticalalignment='top', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
+    "\n",
+    "#seismographs\n",
+    "#ngatamariki\n",
+    "plt.plot(seisng['lon'], seisng['lat'], color='gray', markeredgecolor='black', markeredgewidth=0.2, linestyle='None', marker='^', markersize=4, transform=ccrs.Geodetic())\n",
+    "#rotokawa\n",
+    "plt.plot(seisrt['lon'], seisrt['lat'], color='gray', markeredgecolor='black', markeredgewidth=0.2, linestyle='None', marker='^', markersize=4, transform=ccrs.Geodetic())\n",
+    "#geonet\n",
+    "plt.plot(seisgn['lon'], seisgn['lat'], color='black', markeredgewidth=0, linestyle='None', marker='^', markersize=4, transform=ccrs.Geodetic())\n",
+    "#plot text labels\n",
+    "for index, row in seisng.iterrows():\n",
+    "    plt.text(row['lon'], row['lat'], row['name'], verticalalignment='top', color='white', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
+    "for index, row in seisrt.iterrows():\n",
+    "    plt.text(row['lon'], row['lat'], row['name'], verticalalignment='top', color='white', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
+    "for index, row in seisgn.iterrows():\n",
+    "    plt.text(row['lon'], row['lat'], row['name'], verticalalignment='top', color='white', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
     "#section line\n",
     "plt.plot([176.1742,176.2024], [-38.5260,-38.5730], color='black', linestyle='--', marker='None', transform=ccrs.Geodetic())\n",
     "\n",
     "scale_bar(ax, ccrs.Mercator(), 1)\n",
     "\n",
+    "#legend\n",
+    "#magnitude\n",
+    "m0 = mlines.Line2D([], [], color='white', marker='o', linestyle='None', markersize=5, label=r'$M<1$')\n",
+    "m1 = mlines.Line2D([], [], color='yellow', marker='o', linestyle='None', markersize=5, label=r'$M=1-2$')\n",
+    "m2 = mlines.Line2D([], [], color='darkorange', marker='o', linestyle='None', markersize=5, label=r'$M=2-3$')\n",
+    "m3 = mlines.Line2D([], [], color='red', marker='o', linestyle='None', markersize=5, label=r'$M\\geq3$')\n",
+    "#seismographs\n",
+    "ng = mlines.Line2D([], [], color='gray', markeredgecolor='black', markeredgewidth=0.2, linestyle='None', marker='^', markersize=4, label=r'$Mercury seis$')\n",
+    "gn = mlines.Line2D([], [], color='gray', markeredgewidth=0, linestyle='None', marker='^', markersize=4, label=r'$GeoNet seis$')\n",
+    "#wells\n",
+    "wl = mlines.Line2D([], [], color='black', markeredgewidth=0, linestyle='None', marker='s', markersize=4, label=r'$Wells$')\n",
+    "plt.legend(handles=[m0, m1, m2, m3, ng, gn, wl], fontsize='xx-small', loc='upper right', numpoints=1)\n",
+    "\n",
     "plt.savefig('mercury_thisreport_map.png', dpi=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "convert mercury_thisreport_map.png -trim +repage mercury_thisreport_map.png"
    ]
   },
   {
@@ -447,6 +592,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -487,7 +633,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#imagery\n",
@@ -747,82 +895,6 @@
    "metadata": {},
    "source": [
     "**Plot wide area station map, showing Rotokawa and GeoNet**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Seismographs**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#rotokawa\n",
-    "names = ['lon', 'lat', 'name', 'height']\n",
-    "seisrt = pd.read_csv('seismograph_sites_rotokawa.dat', sep='\\s+', names=names)\n",
-    "\n",
-    "#ngatamariki\n",
-    "names = ['name', 'lat', 'lon']\n",
-    "seisng = pd.read_csv('seismograph_sites_ngatamariki.csv', names=names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "seisng.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "seisrt.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**GeoNet Seismographs**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "names = ['lon', 'lat', 'name']\n",
-    "seisgn = pd.read_csv('geonet_sites.dat', sep='\\s+', names=names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "seisgn"
    ]
   },
   {
