ad csv output of years eqs

--- a/wairakei-tauhara_report/wairakei-tauhara_annual_report.ipynb
+++ b/wairakei-tauhara_report/wairakei-tauhara_annual_report.ipynb
@@ -240,6 +240,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#output to file as Contact often request this\n",
+    "eqsyr.to_csv('eqlist.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
