change to python3

--- a/raoullakes/raoul_lakes_recent.ipynb
+++ b/raoullakes/raoul_lakes_recent.ipynb
@@ -86,17 +86,17 @@
     "  try:\n",
     "    client = Client(nrt_client)\n",
     "    stnrt = client.get_waveforms(net, sta, loc, cmp, time1, time2, attach_response=True)\n",
-    "    print 'nrt client successful'\n",
+    "    print ('nrt client successful')\n",
     "  except:\n",
-    "    print 'nrt client not successful'\n",
+    "    print ('nrt client not successful')\n",
     "\n",
     "  #arc client\n",
     "  try:\n",
     "    client = Client(arc_client)\n",
     "    starc = client.get_waveforms(net, sta, loc, cmp, time1, time2, attach_response=True)\n",
-    "    print 'arc client successful'\n",
+    "    print ('arc client successful')\n",
     "  except:\n",
-    "    print 'arc client not successful'"
+    "    print ('arc client not successful')"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "    cmp = chan[n]['cmp']\n",
     "    loc = chan[n]['loc']\n",
     "    subject = chan[n]['subject']\n",
-    "    print cmp, loc, subject\n",
+    "    print (cmp, loc, subject)\n",
     "    \n",
     "    #last date to process = now\n",
     "    dt2 = UTCDateTime()\n",
@@ -169,8 +169,8 @@
     "    dt1 = dt2 - (ndays * 86400)\n",
     "    dt1str = dt1.date.strftime('%Y-%m-%d')\n",
     "\n",
-    "    print 'first date to process '+dt1str\n",
-    "    print 'last date to process '+dt2str\n",
+    "    print ('first date to process '+dt1str)\n",
+    "    print ('last date to process '+dt2str)\n",
     "\n",
     "    waveboth(dt1, dt2, net, sta, loc, cmp)\n",
     "    \n",
@@ -180,7 +180,7 @@
     "    st.remove_sensitivity()\n",
     "    st.merge(fill_value = 'interpolate')\n",
     "    tr = st[0]\n",
-    "    print\n",
+    "    print()\n",
     "    return(tr)"
    ]
   },
@@ -250,21 +250,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
