--- a/raoullakes/raoul_lakes_longterm.ipynb
+++ b/raoullakes/raoul_lakes_longterm.ipynb
@@ -164,19 +164,19 @@
     "    fname = ch['fname']\n",
     "    loc = ch['loc']\n",
     "    subject = ch['subject']\n",
-    "    print fname, cmp, loc, subject\n",
+    "    print (fname, cmp, loc, subject)\n",
     "    #read in existing data\n",
     "    df = pd.read_csv(fname, parse_dates=True, names=names, index_col=0, skiprows=1)#, infer_datetime_format=True)\n",
     "    \n",
     "    #find first date to process\n",
     "    dt1 = df.index[-1] + pd.to_timedelta(1, unit='D')\n",
     "    dt1str = dt1.strftime('%Y-%m-%d')\n",
-    "    print 'first date to process '+dt1str\n",
+    "    print ('first date to process '+dt1str)\n",
     "        \n",
     "    #find last date to process\n",
     "    dt2 = UTCDateTime() - (ndays * 86400)\n",
     "    dt2str = dt2.date.strftime('%Y-%m-%d')\n",
-    "    print 'last date to process '+dt2str\n",
+    "    print ('last date to process '+dt2str)\n",
     "          \n",
     "    for date in pd.date_range(start=dt1str, end=dt2str, freq='D'):\n",
     "        try:\n",
@@ -187,10 +187,10 @@
     "            mean = tr.data.mean()\n",
     "            std = tr.data.std()\n",
     "        except:\n",
-    "            print date.date(), 'retrieve unsuccessful'\n",
+    "            print (date.date(), 'retrieve unsuccessful')\n",
     "            mean = float('nan')\n",
     "            std = float('nan')\n",
-    "        print date.date(), mean, std\n",
+    "        print (date.date(), mean, std)\n",
     "        vals = {'date':date.date(), 'value':mean, 'error':std}\n",
     "        vals = {'value':mean, 'error':std}\n",
     "        newrow = pd.DataFrame([vals], columns=vals.keys(), index={pd.to_datetime(date.date())})\n",
@@ -198,7 +198,7 @@
     "    \n",
     "    df.to_csv(fname, columns=['value', 'error'], na_rep='NaN', index=True)\n",
     "    \n",
-    "    print"
+    "    print()"
    ]
   },
   {
@@ -428,21 +428,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
