--- a/taranaki_report/taranaki_trc_report.ipynb
+++ b/taranaki_report/taranaki_trc_report.ipynb
@@ -4,16 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taranaki Annual Seismic and Geodetic Report for TRC\n",
-    "--"
+    "# Taranaki Annual Seismic and Geodetic Report for TRC\n",
+    "\n",
+    "## Purpose:\n",
+    "Streamline production of data and figures for Taranaki TRC anuual report. All what is needed in a single notebook.\n",
+    "\n",
+    "This is not highly documented as it is not intended to be for the 'casual user'.\n",
+    "\n",
+    "All we need is a notebook to write the report!!\n",
+    "\n",
+    "## Problems:\n",
+    "With Python3 version, I can't seem to plot GNSS error bars.\n",
+    "\n",
+    "A recent version of Matplotlib is extending aces beyond data limits. set_xlim etc allows this to be fixed, but not for GNSS time series plots.\n",
+    "\n",
+    "## Author:\n",
+    "Steven Sherburn\n",
+    "\n",
+    "## Date:\n",
+    "July 2017"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -55,9 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#box for search area\n",
@@ -71,14 +96,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "startall = '1994-01-01T00:00:00'\n",
-    "startyear = '2016-07-01T00:00:00'\n",
-    "end = '2017-07-01T00:00:00'"
+    "startyear = '2017-07-01T00:00:00'\n",
+    "end = '2018-07-01T00:00:00'"
    ]
   },
   {
@@ -99,20 +122,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&startdate='+startall+'&enddate='+end"
+    "url = 'https://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&startdate='+startall+'&enddate='+end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs = pd.read_csv(url, parse_dates=['origintime'], index_col='origintime')"
@@ -128,9 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#use existing GMT format file with '>' indicating a line break\n",
@@ -159,15 +176,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eqs[(eqs.index>startyear)&(eqs.index<end)].count()"
+    "#number of events is the year\n",
+    "eqs['publicid'][(eqs.index>startyear)&(eqs.index<end)].count()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#prepare eqs\n",
@@ -178,9 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#cross-section area\n",
@@ -203,9 +217,9 @@
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
-    "gl = ax.gridlines(draw_labels=True, alpha = 0.5)\n",
-    "gl.xlabels_top = False\n",
-    "gl.ylabels_right = False\n",
+    "# gl = ax.gridlines(draw_labels=True, alpha = 0.5)\n",
+    "# gl.xlabels_top = False\n",
+    "# gl.ylabels_right = False\n",
     "\n",
     "#active faults\n",
     "plt.plot(faults['longitude'], faults['latitude'], color='black', transform=ccrs.Geodetic())\n",
@@ -223,6 +237,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqsyr50[eqsyr50[' magnitude']>3]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -232,9 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#prepare eqs\n",
@@ -287,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#prepare eqs\n",
@@ -333,9 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#box for search area\n",
@@ -345,7 +362,7 @@
     "wlonmax = 177.3\n",
     "\n",
     "bbox = '172.6,-40.5,177.3,-38.1'\n",
-    "url = 'http://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&startdate='+startyear+'&enddate='+end\n",
+    "url = 'https://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&startdate='+startyear+'&enddate='+end\n",
     "\n",
     "eqsw = pd.read_csv(url, parse_dates=['origintime'], index_col='origintime')"
    ]
@@ -353,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#prepare eqs\n",
@@ -369,9 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#area of main plot\n",
@@ -419,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#use existing GMT format file with '>' indicating a line break\n",
@@ -461,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs50 = eqs[eqs[' depth']<50]\n",
@@ -482,6 +491,7 @@
     "mcount = eqs50m4.resample('1M', label='left', closed='left').count()\n",
     "ax1.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "ax1.bar(mcount.index, mcount.publicid, width = 10, color='blue', edgecolor='blue', align='edge', label='M>=4 earthquakes')\n",
+    "ax1.set_xlim([startall,end])\n",
     "ax1.legend(loc='upper left')\n",
     "mcount = eqs50m3.resample('1M', label='left', closed='left').count()\n",
     "ax2.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
@@ -512,9 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs50.sort_index(ascending=True, inplace=True)\n",
@@ -526,9 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#cumulative number maximum\n",
@@ -547,6 +553,7 @@
     "ax = fig.add_subplot(111)\n",
     "plt.plot(eqs50['evnum'], color='red')\n",
     "ax.set_ylim([0,nmax])\n",
+    "ax.set_xlim([startall,end])\n",
     "#mark change to Sc3 analysis\n",
     "ax.axvline(x='2012-01-01', color='black', linestyle='--', alpha=0.7)\n",
     "ax.text('2012-03-01', 300, 'Change to SC3 analysis', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=12)\n",
@@ -560,6 +567,7 @@
     "eqs50['cumeng'] = eqs50['energy'].cumsum()\n",
     "eqs50['cumeng'] = 100 * eqs50['cumeng'] / eqs50['cumeng'].max()\n",
     "ax2.plot(eqs50['cumeng'], color='blue', marker='None')\n",
+    "ax2.set_ylim([0,100])\n",
     "ax2.tick_params(axis='y', colors='blue')\n",
     "ax2.set_ylabel('percent cumulative energy', color = 'blue')\n",
     "plt.tight_layout()\n",
@@ -576,13 +584,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bbox = '173.5,-39.75,174.58,-38.83'\n",
-    "url = 'http://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&startdate='+startyear+'&enddate='+end\n",
+    "url = 'https://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&startdate='+startyear+'&enddate='+end\n",
     "eqs = pd.read_csv(url, parse_dates=['origintime'], index_col='origintime')"
    ]
   },
@@ -605,9 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#select eqs in depth range and latitude range\n",
@@ -618,9 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#read topography profile file, convert to km\n",
@@ -646,7 +648,7 @@
     "plt.plot(topo['longitude'], topo['elevation'], color='green')\n",
     "plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "plt.scatter(x=sect['longitude'], y=sect[' depth'], color='red')\n",
-    "plt.text('173.55', -4, 'A', verticalalignment='top', horizontalalignment='left', fontsize=14)\n",
+    "plt.text(x=173.55, y=-4, s='A', verticalalignment='top', horizontalalignment='left', fontsize=14)\n",
     "plt.xlim([173.5,174.58])\n",
     "plt.ylim([-5,50])\n",
     "plt.ylabel('Depth (km)')\n",
@@ -658,7 +660,7 @@
     "plt.subplot2grid((3,11), (0,9), colspan=2, rowspan=3)\n",
     "plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "plt.hist(sect[' depth'], bins=[0,5,10,15,20,25,30,35,40,45], orientation='horizontal')\n",
-    "plt.text('2', -4, 'B', verticalalignment='top', horizontalalignment='left', fontsize=14)\n",
+    "plt.text(x=2, y=-4, s='B', verticalalignment='top', horizontalalignment='left', fontsize=14)\n",
     "plt.ylim([-5,50])\n",
     "plt.xlabel('Number of earthquakes')\n",
     "plt.ylabel('Depth (km)')\n",
@@ -677,9 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "od = 11 #filter kernel\n",
@@ -690,7 +690,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#loop for each site\n",
@@ -699,11 +701,11 @@
     "  siteid = str.split(site, '.')[0]\n",
     "  netid = str.split(site, '.')[1]\n",
     "  \n",
-    "  url= 'http://fits.geonet.org.nz/observation?typeID=e&siteID='+siteid+'&networkID='+netid\n",
+    "  url= 'https://fits.geonet.org.nz/observation?typeID=e&siteID='+siteid+'&networkID='+netid\n",
     "  dfe = pd.read_csv(url, names=names, skiprows=1, parse_dates={\"Datetime\" : ['dt']})\n",
-    "  url= 'http://fits.geonet.org.nz/observation?typeID=n&siteID='+siteid+'&networkID='+netid\n",
+    "  url= 'https://fits.geonet.org.nz/observation?typeID=n&siteID='+siteid+'&networkID='+netid\n",
     "  dfn = pd.read_csv(url, names=names, skiprows=1, parse_dates={\"Datetime\" : ['dt']})\n",
-    "  url= 'http://fits.geonet.org.nz/observation?typeID=u&siteID='+siteid+'&networkID='+netid\n",
+    "  url= 'https://fits.geonet.org.nz/observation?typeID=u&siteID='+siteid+'&networkID='+netid\n",
     "  dfu = pd.read_csv(url, names=names, skiprows=1, parse_dates={\"Datetime\" : ['dt']})\n",
     "\n",
     "  #only data up to end date (end of reporting period)\n",
@@ -738,8 +740,9 @@
     "  ax = fig.add_subplot(3, 1, 1)\n",
     "  plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "  plt.plot(df['Datetime'], df['obsn'], marker='o', color='black', linestyle='None')\n",
-    "  plt.errorbar(df['Datetime'], df['obsn'], yerr=df['errn'], capsize=0, linestyle='None')\n",
+    "  #plt.errorbar(df['Datetime'], df['obsn'], yerr=df['errn'], capsize=0, linestyle='None')\n",
     "  plt.plot(df['Datetime'], df['obsnf'], marker='None', color='red')\n",
+    "  #ax.set_xlim([startall,end])\n",
     "  plt.ylabel('dn (mm)')\n",
     "  title = (siteid+' daily position change (mm)')\n",
     "  plt.title(title)\n",
@@ -747,14 +750,14 @@
     "  ax = fig.add_subplot(3, 1, 2)\n",
     "  plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "  plt.plot(df['Datetime'], df['obse'], marker='o', color='black', linestyle='None')\n",
-    "  plt.errorbar(df['Datetime'], df['obse'], yerr=df['erre'], capsize=0, linestyle='None')\n",
+    "  #plt.errorbar(df['Datetime'], df['obse'], yerr=df['erre'], capsize=0, linestyle='None')\n",
     "  plt.plot(df['Datetime'], df['obsef'], marker='None', color='red')\n",
     "  plt.ylabel('de (mm)')\n",
     "\n",
     "  ax = fig.add_subplot(3, 1, 3)\n",
     "  plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "  plt.plot(df['Datetime'], df['obsu'], marker='o', color='black', linestyle='None')\n",
-    "  plt.errorbar(df['Datetime'], df['obsu'], yerr=df['erru'], capsize=0, linestyle='None')\n",
+    "  #plt.errorbar(df['Datetime'], df['obsu'], yerr=df['erru'], capsize=0, linestyle='None')\n",
     "  plt.plot(df['Datetime'], df['obsuf'], marker='None', color='red')\n",
     "  plt.ylabel('du (mm)')\n",
     "\n",
@@ -794,7 +797,7 @@
     "  ax = fig.add_subplot(3, 1, 1)\n",
     "  plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "  plt.plot(df['Datetime'], df['obsn'], marker='o', color='black', linestyle='None')\n",
-    "  plt.errorbar(df['Datetime'], df['obsn'], yerr=df['errn'], capsize=0, linestyle='None')\n",
+    "  #plt.errorbar(df['Datetime'], df['obsn'], yerr=df['errn'], capsize=0, linestyle='None')\n",
     "  plt.plot(df['Datetime'], df['obsnf'], marker='None', color='red')\n",
     "  plt.ylabel('dn (mm)')\n",
     "  title = (siteid+' daily position change (mm)')\n",
@@ -803,14 +806,14 @@
     "  ax = fig.add_subplot(3, 1, 2)\n",
     "  plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "  plt.plot(df['Datetime'], df['obse'], marker='o', color='black', linestyle='None')\n",
-    "  plt.errorbar(df['Datetime'], df['obse'], yerr=df['erre'], capsize=0, linestyle='None')\n",
+    "  #plt.errorbar(df['Datetime'], df['obse'], yerr=df['erre'], capsize=0, linestyle='None')\n",
     "  plt.plot(df['Datetime'], df['obsef'], marker='None', color='red')\n",
     "  plt.ylabel('de (mm)')\n",
     "\n",
     "  ax = fig.add_subplot(3, 1, 3)\n",
     "  plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "  plt.plot(df['Datetime'], df['obsu'], marker='o', color='black', linestyle='None')\n",
-    "  plt.errorbar(df['Datetime'], df['obsu'], yerr=df['erru'], capsize=0, linestyle='None')\n",
+    "  #plt.errorbar(df['Datetime'], df['obsu'], yerr=df['erru'], capsize=0, linestyle='None')\n",
     "  plt.plot(df['Datetime'], df['obsuf'], marker='None', color='red')\n",
     "  plt.ylabel('du (mm)')\n",
     "\n",
@@ -821,21 +824,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
